[workspace]
resolver = "2"

members = [
  "execute",
  "config",
  "core",
  "orchestrator"
]

[workspace.package]
version = "0.1.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(msim)',
  'cfg(fail_points)',
] }


[workspace.dependencies]
anyhow = "1.0.71"
arc-swap = { version = "1.5.1", features = ["serde"] }
async-trait = "0.1.61"
#axum = "0.8.4"
base64 = "0.22.1"
bcs = "0.1.4"
bytes = { version = "1.5.0", features = ["serde"] }
cfg-if = "1.0.0"
dashmap = "6.1.0"
enum_dispatch = "^0.3"
futures = "0.3.28"
http = "1"
#hyper = "1.6.0"
itertools = "0.14.0"
insta = { version = "1.21.1", features = ["redactions", "yaml", "json"] }
mockall = "0.13.1"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
prometheus = "0.13.3"
prost = "0.13"
prost-build = "0.13"
quinn-proto = "0.11.7"
rand = "0.8.5"
rstest = "0.16.0"
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
  "ring",
] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
strum_macros = "0.27.1"
tap = "1.0.1"
tempfile = "3.3.0"
thiserror = "2.0.12"
tokio = "1.43.0"
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-util = "0.7.10"
tonic = { version = "0.13", features = [
  "zstd",
  "transport",
  "tls-webpki-roots",
] }
tonic-build = { version = "0.13", features = ["prost", "transport"] }
tonic-health = "0.13"
tonic-rustls = { git = "https://github.com/bmwill/tonic-rustls", rev = "77c3334b8aa00a982fb432d77c768c41aab1b05e" }
tower = { version = "0.5", features = [
  "full",
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
tower-http = { version = "0.5", features = [
  "cors",
  "full",
  "trace",
  "set-header",
  "propagate-header",
] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x509-parser = { version = "0.17.0", features = ["verify"] }

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }
anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }

mysten-common = { git = "https://github.com/MystenLabs/sui", rev = "c58d2a0bfaae04581c56510548194524e89e2888", package = "mysten-common"}
mysten-metrics = { git = "https://github.com/MystenLabs/sui", rev = "c58d2a0bfaae04581c56510548194524e89e2888", package = "mysten-metrics"}
mysten-network = { git = "https://github.com/MystenLabs/sui", rev = "c58d2a0bfaae04581c56510548194524e89e2888", package = "mysten-network"}
shared-crypto = { git = "https://github.com/MystenLabs/sui", rev = "c58d2a0bfaae04581c56510548194524e89e2888", package = "shared-crypto"}
sui-http = { git = "https://github.com/MystenLabs/sui", rev = "c58d2a0bfaae04581c56510548194524e89e2888", package = "sui-http"}
sui-macros = { git = "https://github.com/MystenLabs/sui", rev = "c58d2a0bfaae04581c56510548194524e89e2888", package = "sui-macros"}
sui-tls = { git = "https://github.com/MystenLabs/sui", rev = "c58d2a0bfaae04581c56510548194524e89e2888", package = "sui-tls"}

sui-protocol-config = { git = "https://github.com/MystenLabs/sui", rev = "c58d2a0bfaae04581c56510548194524e89e2888", package = "sui-protocol-config"}
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui", rev = "c58d2a0bfaae04581c56510548194524e89e2888", package = "telemetry-subscribers"}
typed-store = { git = "https://github.com/MystenLabs/sui", rev = "c58d2a0bfaae04581c56510548194524e89e2888", package = "typed-store"}

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto-zkp" }

consensus-config = { path = "config" }
consensus-core = { path = "core" }