[package]
name = "execute"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "single-node"
path = "src/bin/single_node.rs"

[[bin]]
name = "network"
path = "src/bin/network.rs"

[[bin]]
name = "validator"
path = "src/bin/validator.rs"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
consensus-core = { workspace = true }
consensus-config = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

clap = { version = "4.3.3", features = ["derive"] }
eyre = "0.6.8"
color-eyre = "0.6.2"
rand = "0.8.5"
mysten-metrics = { workspace = true }
prometheus = { workspace = true }
sui-protocol-config = { workspace = true }

# New dependencies for validator node
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
fastcrypto = { workspace = true }

# Tendermint integration
tendermint-abci = { version = "0.40", default-features = false, features = ["kvstore-app", "binary"] }
tendermint-rpc = { version = "0.40", default-features = false, features = ["http-client"] }
tendermint-proto = { version = "0.40", default-features = false }
async-trait = "0.1"

# gRPC dependencies
tonic = { version = "0.10", features = ["transport", "prost"] }
prost = "0.12"

# Additional dependencies for enhanced integration
parking_lot = "0.12"
tap = "1.0"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
# Test dependencies
tokio-test = "0.4"
assert2 = "0.3"
test-log = "0.2"
tempfile = "3.8"