[package]
name = "manager"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
consensus-core = { workspace = true }
consensus-config = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }