[package]
name = "orchestrator"
version = "0.0.1"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

clap = { version = "4.3.3", features = ["derive"] }
eyre = "0.6.8"
color-eyre = "0.6.2"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0.88"
async-trait = "0.1.61"
prettytable-rs = "0.10"
thiserror = "1.0.38"
crossterm = "0.26.0"
aws-config = "0.54.1"
aws-sdk-ec2 = "0.24.0"
rand = "0.8.5"
plotters = "0.3.4"
glob = "0.3.1"
ssh2 = "0.9.4" # TODO: remove this dependency

prometheus-parse = { git = "https://github.com/asonnino/prometheus-parser.git", rev = "75334db" }

consensus-core = { workspace = true }
consensus-config = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "orchestrator"
path = "src/main.rs"